--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(AoC_04_1 aoc04_1.cpp)
 add_executable(AoC_04_2 aoc04_2.cpp)
 add_executable(AoC_05_1 aoc05_1.cpp toolbox.h)
 add_executable(AoC_05_2 aoc05_2.cpp toolbox.h)
+add_executable(AoC_06   aoc06.cpp)
 
 configure_file(input_files/aoc01.txt ${CMAKE_BINARY_DIR}/aoc01.txt COPYONLY)
 configure_file(input_files/aoc01_sample.txt ${CMAKE_BINARY_DIR}/aoc01_sample.txt COPYONLY)
@@ -26,3 +27,5 @@ configure_file(input_files/aoc04.txt ${CMAKE_BINARY_DIR}/aoc04.txt COPYONLY)
 configure_file(input_files/aoc04_sample.txt ${CMAKE_BINARY_DIR}/aoc04_sample.txt COPYONLY)
 configure_file(input_files/aoc05.txt ${CMAKE_BINARY_DIR}/aoc05.txt COPYONLY)
 configure_file(input_files/aoc05_sample.txt ${CMAKE_BINARY_DIR}/aoc05_sample.txt COPYONLY)
+configure_file(input_files/aoc06.txt ${CMAKE_BINARY_DIR}/aoc06.txt COPYONLY)
+configure_file(input_files/aoc06_sample.txt ${CMAKE_BINARY_DIR}/aoc06_sample.txt COPYONLY)
