--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,11 @@ project ("AdventOfCode2021")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(AoC_01_1	aoc01_1.cpp)
-add_executable(AoC_01_2 aoc01_2.cpp)
-add_executable(AoC_02_1	aoc02_1.cpp)
-add_executable(AoC_02_2 aoc02_2.cpp)
-add_executable(AoC_03_1 aoc03_1.cpp)
-add_executable(AoC_03_2 aoc03_2.cpp)
-add_executable(AoC_04_1 aoc04_1.cpp)
-add_executable(AoC_04_2 aoc04_2.cpp)
-add_executable(AoC_05_1 aoc05_1.cpp toolbox.h)
-add_executable(AoC_05_2 aoc05_2.cpp toolbox.h)
+add_executable(AoC_01   aoc01.cpp)
+add_executable(AoC_02   aoc02.cpp)
+add_executable(AoC_03   aoc03.cpp)
+add_executable(AoC_04   aoc04.cpp)
+add_executable(AoC_05   aoc05.cpp toolbox.h)
 add_executable(AoC_06   aoc06.cpp)
 
 configure_file(input_files/aoc01.txt ${CMAKE_BINARY_DIR}/aoc01.txt COPYONLY)
