--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(AoC_04   aoc04.cpp)
 add_executable(AoC_05   aoc05.cpp toolbox.h)
 add_executable(AoC_06   aoc06.cpp)
 add_executable(AoC_07   aoc07.cpp)
+add_executable(AoC_08   aoc08.cpp)
 
 configure_file(input_files/aoc01.txt ${CMAKE_BINARY_DIR}/aoc01.txt COPYONLY)
 configure_file(input_files/aoc01_sample.txt ${CMAKE_BINARY_DIR}/aoc01_sample.txt COPYONLY)
@@ -27,3 +28,5 @@ configure_file(input_files/aoc06.txt ${CMAKE_BINARY_DIR}/aoc06.txt COPYONLY)
 configure_file(input_files/aoc06_sample.txt ${CMAKE_BINARY_DIR}/aoc06_sample.txt COPYONLY)
 configure_file(input_files/aoc07.txt ${CMAKE_BINARY_DIR}/aoc07.txt COPYONLY)
 configure_file(input_files/aoc07_sample.txt ${CMAKE_BINARY_DIR}/aoc07_sample.txt COPYONLY)
+configure_file(input_files/aoc08.txt ${CMAKE_BINARY_DIR}/aoc08.txt COPYONLY)
+configure_file(input_files/aoc08_sample.txt ${CMAKE_BINARY_DIR}/aoc08_sample.txt COPYONLY)
