--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(AoC_05   aoc05.cpp toolbox.h)
 add_executable(AoC_06   aoc06.cpp)
 add_executable(AoC_07   aoc07.cpp)
 add_executable(AoC_08   aoc08.cpp)
+add_executable(AoC_09   aoc09.cpp)
 
 configure_file(input_files/aoc01.txt ${CMAKE_BINARY_DIR}/aoc01.txt COPYONLY)
 configure_file(input_files/aoc01_sample.txt ${CMAKE_BINARY_DIR}/aoc01_sample.txt COPYONLY)
@@ -30,3 +31,5 @@ configure_file(input_files/aoc07.txt ${CMAKE_BINARY_DIR}/aoc07.txt COPYONLY)
 configure_file(input_files/aoc07_sample.txt ${CMAKE_BINARY_DIR}/aoc07_sample.txt COPYONLY)
 configure_file(input_files/aoc08.txt ${CMAKE_BINARY_DIR}/aoc08.txt COPYONLY)
 configure_file(input_files/aoc08_sample.txt ${CMAKE_BINARY_DIR}/aoc08_sample.txt COPYONLY)
+configure_file(input_files/aoc09.txt ${CMAKE_BINARY_DIR}/aoc09.txt COPYONLY)
+configure_file(input_files/aoc09_sample.txt ${CMAKE_BINARY_DIR}/aoc09_sample.txt COPYONLY)
