--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(AoC_07   aoc07.cpp)
 add_executable(AoC_08   aoc08.cpp)
 add_executable(AoC_09   aoc09.cpp)
 add_executable(AoC_10   aoc10.cpp)
+add_executable(AoC_11   aoc11.cpp)
 
 configure_file(input_files/aoc01.txt ${CMAKE_BINARY_DIR}/aoc01.txt COPYONLY)
 configure_file(input_files/aoc01_sample.txt ${CMAKE_BINARY_DIR}/aoc01_sample.txt COPYONLY)
@@ -36,3 +37,5 @@ configure_file(input_files/aoc09.txt ${CMAKE_BINARY_DIR}/aoc09.txt COPYONLY)
 configure_file(input_files/aoc09_sample.txt ${CMAKE_BINARY_DIR}/aoc09_sample.txt COPYONLY)
 configure_file(input_files/aoc10.txt ${CMAKE_BINARY_DIR}/aoc10.txt COPYONLY)
 configure_file(input_files/aoc10_sample.txt ${CMAKE_BINARY_DIR}/aoc10_sample.txt COPYONLY)
+configure_file(input_files/aoc11.txt ${CMAKE_BINARY_DIR}/aoc11.txt COPYONLY)
+configure_file(input_files/aoc11_sample.txt ${CMAKE_BINARY_DIR}/aoc11_sample.txt COPYONLY)
