--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,14 @@ add_executable(AoC_01   aoc01.cpp)
 add_executable(AoC_02   aoc02.cpp)
 add_executable(AoC_03   aoc03.cpp)
 add_executable(AoC_04   aoc04.cpp)
-add_executable(AoC_05   aoc05.cpp toolbox.h)
+add_executable(AoC_05   aoc05.cpp)
 add_executable(AoC_06   aoc06.cpp)
 add_executable(AoC_07   aoc07.cpp)
 add_executable(AoC_08   aoc08.cpp)
 add_executable(AoC_09   aoc09.cpp)
 add_executable(AoC_10   aoc10.cpp)
 add_executable(AoC_11   aoc11.cpp)
+add_executable(AoC_12   aoc12.cpp)
 
 configure_file(input_files/aoc01.txt ${CMAKE_BINARY_DIR}/aoc01.txt COPYONLY)
 configure_file(input_files/aoc01_sample.txt ${CMAKE_BINARY_DIR}/aoc01_sample.txt COPYONLY)
@@ -39,3 +40,5 @@ configure_file(input_files/aoc10.txt ${CMAKE_BINARY_DIR}/aoc10.txt COPYONLY)
 configure_file(input_files/aoc10_sample.txt ${CMAKE_BINARY_DIR}/aoc10_sample.txt COPYONLY)
 configure_file(input_files/aoc11.txt ${CMAKE_BINARY_DIR}/aoc11.txt COPYONLY)
 configure_file(input_files/aoc11_sample.txt ${CMAKE_BINARY_DIR}/aoc11_sample.txt COPYONLY)
+configure_file(input_files/aoc12.txt ${CMAKE_BINARY_DIR}/aoc12.txt COPYONLY)
+configure_file(input_files/aoc12_sample.txt ${CMAKE_BINARY_DIR}/aoc12_sample.txt COPYONLY)
