--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(AoC_09   aoc09.cpp)
 add_executable(AoC_10   aoc10.cpp)
 add_executable(AoC_11   aoc11.cpp)
 add_executable(AoC_12   aoc12.cpp)
+add_executable(AoC_13   aoc13.cpp)
 
 configure_file(input_files/aoc01.txt ${CMAKE_BINARY_DIR}/aoc01.txt COPYONLY)
 configure_file(input_files/aoc01_sample.txt ${CMAKE_BINARY_DIR}/aoc01_sample.txt COPYONLY)
@@ -42,3 +43,5 @@ configure_file(input_files/aoc11.txt ${CMAKE_BINARY_DIR}/aoc11.txt COPYONLY)
 configure_file(input_files/aoc11_sample.txt ${CMAKE_BINARY_DIR}/aoc11_sample.txt COPYONLY)
 configure_file(input_files/aoc12.txt ${CMAKE_BINARY_DIR}/aoc12.txt COPYONLY)
 configure_file(input_files/aoc12_sample.txt ${CMAKE_BINARY_DIR}/aoc12_sample.txt COPYONLY)
+configure_file(input_files/aoc13.txt ${CMAKE_BINARY_DIR}/aoc13.txt COPYONLY)
+configure_file(input_files/aoc13_sample.txt ${CMAKE_BINARY_DIR}/aoc13_sample.txt COPYONLY)
