--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(AoC_10   aoc10.cpp)
 add_executable(AoC_11   aoc11.cpp)
 add_executable(AoC_12   aoc12.cpp)
 add_executable(AoC_13   aoc13.cpp)
+add_executable(AoC_14   aoc14.cpp)
 
 configure_file(input_files/aoc01.txt ${CMAKE_BINARY_DIR}/aoc01.txt COPYONLY)
 configure_file(input_files/aoc01_sample.txt ${CMAKE_BINARY_DIR}/aoc01_sample.txt COPYONLY)
@@ -45,3 +46,5 @@ configure_file(input_files/aoc12.txt ${CMAKE_BINARY_DIR}/aoc12.txt COPYONLY)
 configure_file(input_files/aoc12_sample.txt ${CMAKE_BINARY_DIR}/aoc12_sample.txt COPYONLY)
 configure_file(input_files/aoc13.txt ${CMAKE_BINARY_DIR}/aoc13.txt COPYONLY)
 configure_file(input_files/aoc13_sample.txt ${CMAKE_BINARY_DIR}/aoc13_sample.txt COPYONLY)
+configure_file(input_files/aoc14.txt ${CMAKE_BINARY_DIR}/aoc14.txt COPYONLY)
+configure_file(input_files/aoc14_sample.txt ${CMAKE_BINARY_DIR}/aoc14_sample.txt COPYONLY)
