--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(AoC_13   aoc13.cpp)
 add_executable(AoC_14   aoc14.cpp)
 add_executable(AoC_15   aoc15.cpp)
 add_executable(AoC_16   aoc16.cpp)
+add_executable(AoC_17   aoc17.cpp)
 
 configure_file(input_files/aoc01.txt ${CMAKE_BINARY_DIR}/aoc01.txt COPYONLY)
 configure_file(input_files/aoc01_sample.txt ${CMAKE_BINARY_DIR}/aoc01_sample.txt COPYONLY)
@@ -54,3 +55,5 @@ configure_file(input_files/aoc15.txt ${CMAKE_BINARY_DIR}/aoc15.txt COPYONLY)
 configure_file(input_files/aoc15_sample.txt ${CMAKE_BINARY_DIR}/aoc15_sample.txt COPYONLY)
 configure_file(input_files/aoc16.txt ${CMAKE_BINARY_DIR}/aoc16.txt COPYONLY)
 configure_file(input_files/aoc16_sample.txt ${CMAKE_BINARY_DIR}/aoc16_sample.txt COPYONLY)
+configure_file(input_files/aoc17.txt ${CMAKE_BINARY_DIR}/aoc17.txt COPYONLY)
+configure_file(input_files/aoc17_sample.txt ${CMAKE_BINARY_DIR}/aoc17_sample.txt COPYONLY)
