--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(AoC_14   aoc14.cpp)
 add_executable(AoC_15   aoc15.cpp)
 add_executable(AoC_16   aoc16.cpp)
 add_executable(AoC_17   aoc17.cpp)
+add_executable(AoC_18   aoc18.cpp)
 
 configure_file(input_files/aoc01.txt ${CMAKE_BINARY_DIR}/aoc01.txt COPYONLY)
 configure_file(input_files/aoc01_sample.txt ${CMAKE_BINARY_DIR}/aoc01_sample.txt COPYONLY)
@@ -57,3 +58,5 @@ configure_file(input_files/aoc16.txt ${CMAKE_BINARY_DIR}/aoc16.txt COPYONLY)
 configure_file(input_files/aoc16_sample.txt ${CMAKE_BINARY_DIR}/aoc16_sample.txt COPYONLY)
 configure_file(input_files/aoc17.txt ${CMAKE_BINARY_DIR}/aoc17.txt COPYONLY)
 configure_file(input_files/aoc17_sample.txt ${CMAKE_BINARY_DIR}/aoc17_sample.txt COPYONLY)
+configure_file(input_files/aoc18.txt ${CMAKE_BINARY_DIR}/aoc18.txt COPYONLY)
+configure_file(input_files/aoc18_sample.txt ${CMAKE_BINARY_DIR}/aoc18_sample.txt COPYONLY)
